--- a/Holidays/Halloween/Halloween_Card.yaml
+++ b/Holidays/Halloween/Halloween_Card.yaml
@@ -7,65 +7,64 @@ show_icon: true
 layout: vertical
 state_display: |
   [[[
-    const days = entity.state;
+    const days = entity.state; 
     if (days <= 0) return "Happy Halloween!";
     if (days == 1) return "Only 1 day left!";
     return days + " days";
   ]]]
 styles:
   card:
-  - background-image: url("/local/Pictures/Halloween.jpg")
-  - background-size: cover
-  - background-position: center
-  - color: white
-  - border-radius: 20px
-  - box-shadow: 0 0 25px rgba(255,165,0,0.15)
-  - text-align: center
-  - padding: 20px
-  - position: relative
-  - overflow: hidden
+    - background-image: url("/local/Pictures/Holidays/Halloween.jpeg")
+    - background-size: cover
+    - background-position: center
+    - color: white
+    - border-radius: 20px
+    - box-shadow: 0 0 25px rgba(255,165,0,0.15)
+    - text-align: center
+    - padding: 20px
+    - position: relative
+    - overflow: hidden
   name:
-  - font-size: 38px
-  - font-weight: null
-  - color: orange
-  - text-shadow: 1px 1px 6px black
-  - z-index: 1
+    - font-size: 38px
+    - font-weight: null
+    - color: white
+    - text-shadow: 1px 1px 6px black
+    - z-index: 1
   state:
-  - font-size: 48px
-  - font-weight: null
-  - color: white
-  - text-shadow: 2px 2px 10px black
-  - z-index: 1
+    - font-size: 48px
+    - font-weight: null
+    - color: white
+    - text-shadow: 2px 2px 10px black
+    - z-index: 1
   icon:
-  - width: 120px
-  - color: "#ff9900"
-  - filter: drop-shadow(0px 0px 5px white)
-  - z-index: 1
+    - width: 120px
+    - color: red
+    - filter: drop-shadow(0px 0px 5px white)
+    - z-index: 1
 extra_styles: >
   @keyframes float {
-    0% { transform: translateY(250px); opacity: 0; }
-    50% { opacity: 1; }
-    100% { transform: translateY(-10px); opacity: 0; }
-  }
-  .ghost {
+    0% { transform: translateY(0px); opacity: 0.3; }
+    50% { transform: translateY(-20px); opacity: 0.9; }
+    100% { transform: translateY(0px); opacity: 0.3; }
+  } .ghost {
     position: absolute;
-    bottom: -10px;
     color: white;
-    text-shadow: 0 0 1px black;
-    opacity: 0;
-    animation: float linear infinite;
+    filter: drop-shadow(0px 0px 5px rgba(0,0,0,0.5));
+    animation: float ease-in-out infinite;
     pointer-events: none;
     z-index: 0;
-  }
-  .ghost:nth-child(1) { left: 10%; animation-duration: 10s; animation-delay: 1s; font-size: 18px; }
-  .ghost:nth-child(2) { left: 25%; animation-duration: 8s; animation-delay: 3s; font-size: 22px; }
-  .ghost:nth-child(3) { left: 45%; animation-duration: 12s; animation-delay: 0s; font-size: 16px; }
-  .ghost:nth-child(4) { left: 65%; animation-duration: 9s; animation-delay: 2s; font-size: 20px; }
-  .ghost:nth-child(5) { left: 85%; animation-duration: 11s; animation-delay: 4s; font-size: 19px; }
+  } /* Ghost 1: Top Left */ .ghost:nth-child(1) { top: 10%; left: 5%;
+  animation-duration: 18s; animation-delay: 0s; font-size: 18px; } /* Ghost 2:
+  Bottom Right area */ .ghost:nth-child(2) { top: 70%; left: 80%;
+  animation-duration: 22s; animation-delay: 2s; font-size: 24px; } /* Ghost 3:
+  Middle Right */ .ghost:nth-child(3) { top: 40%; left: 85%; animation-duration:
+  15s; animation-delay: 1s; font-size: 16px; } /* Ghost 4: Bottom Left area */
+  .ghost:nth-child(4) { top: 75%; left: 15%; animation-duration: 19s;
+  animation-delay: 5s; font-size: 20px; } /* Ghost 5: Top Right */
+  .ghost:nth-child(5) { top: 15%; left: 75%; animation-duration: 25s;
+  animation-delay: 3s; font-size: 19px; }
 custom_fields:
   ghosts: >
-    <div class="ghost">👻</div>
-    <div class="ghost">👻</div>
-    <div class="ghost">👻</div>
-    <div class="ghost">👻</div>
-    <div class="ghost">👻</div>
+    <div class="ghost">👻</div> <div class="ghost">👻</div> <div
+    class="ghost">👻</div> <div class="ghost">👻</div> <div
+    class="ghost">👻</div>
